--- a/css/styles.css
+++ b/css/styles.css
@@ -6,3 +6,12 @@ body {
 .shown-content {
   display: none;
 }
+
+.clickable {
+  cursor: pointer;
+  color: #0088cc;
+}
+
+.clickable:hover {
+  text-decoration: underline;
+}
